--- a/app.css
+++ b/app.css
@@ -4,11 +4,11 @@ html {
 }
 
 body {
-background-color: #60a9ff;
-display: flex;
-justify-content: center;
-align-items: center;
-min-height: 100vh;
+    background-color: #60a9ff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
 }
 
 .panel {
@@ -77,7 +77,9 @@ min-height: 100vh;
     margin: 25px 0;
     transition: background-color 200ms ease-in-out;
 }
-.pricing-button:hover, .pricing-button:focus {
+
+.pricing-button:hover,
+.pricing-button:focus {
     background-color: #e1f1ff;
 }
 
@@ -86,7 +88,8 @@ min-height: 100vh;
     color: white;
 }
 
-.pricing-button.is-featured:hover, .pricing-button.is-featured:focus {
+.pricing-button.is-featured:hover,
+.pricing-button.is-featured:focus {
     background-color: #269aff;
     color: white;
 }
@@ -95,11 +98,13 @@ min-height: 100vh;
     .panel {
         flex-direction: row;
     }
+
     .pricing-plan {
         border-bottom: none;
         border-right: 1px solid #e1f1ff;
         padding: 25px 50px;
     }
+
     .pricing-plan:last-child {
         border-right: none;
     }
